@@ -1,4 +1,4 @@
-/*	$OpenBSD: sshpty.h,v 1.6 2006/02/07 01:42:00 stevesk Exp $	*/
+/*	$OpenBSD: sshpty.h,v 1.7 2006/03/20 18:14:02 deraadt Exp $	*/
 
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
@@ -23,10 +23,10 @@ struct termios get_saved_tio(void);
 void	 leave_raw_mode(void);
 void	 enter_raw_mode(void);
 
-int	 pty_allocate(int *, int *, char *, int);
+int	 pty_allocate(int *, int *, char *, size_t);
 void	 pty_release(const char *);
 void	 pty_make_controlling_tty(int *, const char *);
-void	 pty_change_window_size(int, int, int, int, int);
+void	 pty_change_window_size(int, u_int, u_int, u_int, u_int);
 void	 pty_setowner(struct passwd *, const char *);
 
 #endif				/* SSHPTY_H */
